[gd_scene load_steps=14 format=3 uid="uid://b326ovwmj62hf"]

[ext_resource type="Script" uid="uid://bikn6bnuo2lda" path="res://scripts/main_menu.gd" id="1_v40wr"]
[ext_resource type="PackedScene" uid="uid://k635iu86fy37" path="res://scene_objects/menu_background.tscn" id="2_vuhek"]
[ext_resource type="PackedScene" uid="uid://bmuu7gov5nfwd" path="res://scene_objects/title_bar.tscn" id="3_jk1qb"]
[ext_resource type="PackedScene" uid="uid://oq5258by1a1k" path="res://scene_objects/menu_button.tscn" id="4_5dd4i"]
[ext_resource type="Texture2D" uid="uid://cwqyupkb878g0" path="res://resources/button_icon_atlas_play.tres" id="5_tbmy8"]
[ext_resource type="Texture2D" uid="uid://boqax66a0370t" path="res://assets/textures/tilemap_packed.png" id="6_jk1qb"]
[ext_resource type="FontFile" uid="uid://com4cjqc1ln44" path="res://assets/fonts/Montserrat-Medium.otf" id="8_ns53n"]
[ext_resource type="PackedScene" uid="uid://b7fkndcm0e336" path="res://scene_objects/settings.tscn" id="11_5pplk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5dd4i"]
atlas = ExtResource("5_tbmy8")
region = Rect2(0, 112, 16, 16)
margin = Rect2(3, 3, 3, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgwnu"]
atlas = ExtResource("6_jk1qb")
region = Rect2(32, 96, 16, 16)
margin = Rect2(3, 3, 3, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_flqon"]
atlas = ExtResource("6_jk1qb")
region = Rect2(80, 80, 16, 16)
margin = Rect2(3, 3, 3, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcqid"]
atlas = ExtResource("6_jk1qb")
region = Rect2(144, 32, 16, 16)
margin = Rect2(3, 3, 3, 6)

[sub_resource type="LabelSettings" id="LabelSettings_cpmo2"]
font = ExtResource("8_ns53n")
font_size = 30
shadow_size = 0
shadow_offset = Vector2(0, 0)

[node name="mainMenu" type="Node2D"]
script = ExtResource("1_v40wr")

[node name="backgroudMenu" parent="." instance=ExtResource("2_vuhek")]
anchors_preset = -1
offset_right = 1920.0
offset_bottom = 1080.0

[node name="menuContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 960.0
offset_top = 535.0
offset_right = 960.0
offset_bottom = 535.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_constants/separation = 10

[node name="Title" parent="menuContainer" instance=ExtResource("3_jk1qb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 325)
layout_mode = 2
margin_width = 50.0

[node name="PlayButton" parent="menuContainer" instance=ExtResource("4_5dd4i")]
unique_name_in_owner = true
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Play"
icon = SubResource("AtlasTexture_5dd4i")
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HowToPlayButton" parent="menuContainer" instance=ExtResource("4_5dd4i")]
visible = false
layout_mode = 2
focus_next = NodePath("../PlayButton")
text = "How to play"

[node name="SettingsButton" parent="menuContainer" instance=ExtResource("4_5dd4i")]
layout_mode = 2
text = "Settings"
icon = SubResource("AtlasTexture_lgwnu")
expand_icon = true

[node name="CreditsButton" parent="menuContainer" instance=ExtResource("4_5dd4i")]
layout_mode = 2
text = "Credits"
icon = SubResource("AtlasTexture_flqon")
expand_icon = true

[node name="ExitButton" parent="menuContainer" instance=ExtResource("4_5dd4i")]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"
icon = SubResource("AtlasTexture_rcqid")
expand_icon = true

[node name="versionString" type="Label" parent="menuContainer"]
custom_minimum_size = Vector2(1880, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "VersionString"
label_settings = SubResource("LabelSettings_cpmo2")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="settings" parent="." instance=ExtResource("11_5pplk")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="menuContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="menuContainer/HowToPlayButton" to="." method="show_how_to_play_screen"]
[connection signal="pressed" from="menuContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="menuContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="menuContainer/ExitButton" to="." method="_on_exit_button_pressed"]
